Change blockui linking to rails helper method javascript_include_tag

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,6 @@
     <%= yield %>
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <script src="/assets/jQuery.blockUI.js"></script>
-
+    <%= javascript_include_tag("jQuery.blockUI.js") %>
   </body>
 </html>
